<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多样派</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	
    <string name="home">home</string>
    <string name="capsule">capsule</string>
    <string name="dynamic">dynamic</string>
    <string name="list">list</string>
    <string name="user">user</string>
    <string name="play">play</string>
    <string name="art">art</string>
    <string name="education">education</string>
    <string name="society">society</string>
    <string name="exercise">exercise</string>
    <string name="recommend">recommend</string>
</resources>